--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
   <script src="base.js"></script>  
   <script src="modal.js"></script>
+  <script src="confirm.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
